app/frontend/stylesheets/object/component/_range-slider.scss
@use '../../foundation' as *;

$PADDING_METER: 8px;

range-slider::part(wrapper) {
  display: flex;
  flex-wrap: wrap;
  column-gap: 2em;
}

range-slider::part(label) {
  margin: 0;
}

range-slider::part(meter) {
  position: relative;
  z-index: 1;
  width: 100%;
  max-width: 250px;
  min-height: 24px;
  padding: 0 $PADDING_METER;
  margin-top: 7px;
  margin-bottom: 15px;
}

range-slider::part(div-input) {
  text-align: center;
}

range-slider::part(checkbox) {
  width: 13px;
  height: 13px;
  margin: 0;
  vertical-align: middle;
}

range-slider::part(num-input) {
  width: 5em;
  margin-right: 3px;
  font-size: inherit;
  @include input-number;
}

range-slider::part(checkbox-label) {
  display: inline-flex;
  gap: 4px;
  align-items: center;
  min-height: 24px;
  margin-bottom: 0;
  margin-left: 8px;
}

range-slider::part(ruler) {
  position: relative;
  font-size: 0.8em;
}

range-slider::part(scale) {
  position: absolute;
  z-index: 10;
  line-height: 1;
  transform: translateY(13px);

  &::before {
    position: absolute;
    top: -16px;
    left: 0.5em;
    display: block;
    height: 14px;
    content: '';
    border-left: dotted 1px var(--color-separator);
  }
}

range-slider::part(meter-container) {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 24px;
}

range-slider::part(slider-track) {
  width: calc(100% - 3px);
  height: 8px;
}

range-slider::part(slider) {
  position: absolute;
  width: 100%;
  min-height: 24px;
  margin: auto;
  appearance: none;
  pointer-events: none;
  background-color: transparent;
}

range-slider::part(match) {
  margin-left: 1em;
  text-align: center;
}

range-slider::part(scale-vertical) {
  transform: rotate(90deg) translateX(-2em);

  &::before {
    transform: rotate(90deg) translate(15px, -2em);
  }
}

